<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_cameraforleaf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tv_cameraforleaf" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <SurfaceView
            android:id="@+id/sfv_Camera_for_Leaf"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <com.example.fengshow.appforricenitrogen.other.CameraTopRectView
            android:id="@+id/top_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/txt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/txt_cancel"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/txt_take"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/txt_take"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/bt_run_leaf_cut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_run_leaf_cut"
            tools:ignore="ButtonStyle" />

    </LinearLayout>


</LinearLayout>
