<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Canopy_Result"
        android:textSize="50px" />

    <!--
     <ImageView
        android:id="@+id/pic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:scaleType="matrix"
        />
    -->
    <com.example.fengshow.appforricenitrogen.image.ZoomImageView
        android:id="@+id/pic_canopy"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:scaleType="matrix" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/bt_Run_Canopy"
            android:layout_marginEnd="26dp">
            <TextView
                android:id="@+id/tv_canopy_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_canopy_text"/>
            <TextView
                android:id="@+id/tv_canopy_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_canopy_result" />
        </LinearLayout>


        <Button
            android:id="@+id/bt_Run_Canopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:onClick="runcanopy"
            android:text="@string/bt_Run_Canopy"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>


</LinearLayout>
