<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Leaf_Nitrogen_Result"
        android:textSize="50px" />

    <!--
     <ImageView
        android:id="@+id/pic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:scaleType="matrix"
        />
    -->
    <com.example.fengshow.appforricenitrogen.image.ZoomImageView
        android:id="@+id/pic_leaf_with_wireframe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:scaleType="matrix" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_border1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_nitrogen_level_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_nitrogen_level_text"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_nitrogen_level_numb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_nitrogen_level_numb"
                android:textColor="#316e0e"
                android:textSize="35dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_border1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_nitrogen_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Nitrogen Content"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_nitrogen_content_numb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/tv_nitrogen_content"
                        android:textColor="#316e0e"
                        android:textSize="35dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_nitrogen_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/tv_nitrogen_unit"
                    android:textColor="#316e0e"
                    android:textSize="25dp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bt_Run_leaf_with_wireframe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/bt_Run_leaf_with_wireframe" />

</LinearLayout>
